--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-Jenny's Portfolio
+<!DOCTYPE html>
+<html>
+	<head>
+	<title>Jenny's Portfolio</title>
+	</head>
+<body>
+<main>
+<h1>Jennifer McCargish's Portfolio</h1>
+
+<h2>About Me</h2>
+
+
+
+
+<h2>Projects</h2>
+
+</main>
+</body>
+</html>
