--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
 	</head>
 <body>
 <main>
+
 <h1>Jennifer McCargish's Portfolio</h1>
 
-<h2>About Me</h2>
+	<h2>About Me</h2>
+		<p>I am currently enrolled in a 12-week coding bootcamp.  I was previously in retail management where we had made the shift to using technology to execute everything we did.  Ultimately, I wanted to be challenged in a different way, so I decided to enroll in the bootcamp so I could try a different and more creative approach to working in the industry.</p>
+
+		<h3>Contact Information</h3>
+		<p>jennymccargish@gmail.com</p>
 
 
 
