--- a/index.html
+++ b/index.html
@@ -7,8 +7,16 @@
 <main>
 
 <h1>Jennifer McCargish's Portfolio</h1>
+			<header>
+				<nav>
+					<ul>
+						<li><a href="#about me">About Me</a></li>
+						<li><a href="#projects">Projects</a></li> 
+					</ul>
+				</nav>
+			</header>
 
-	<h2>About Me</h2>
+	<h2 id="about me">About Me</h2>
 		<p>I am currently enrolled in a 12-week coding bootcamp.  I was previously in retail management where we had made the shift to using technology to execute everything we did.  Ultimately, I wanted to be challenged in a different way, so I decided to enroll in the bootcamp so I could try a different and more creative approach to working in the industry.</p>
 
 		<h3>Contact Information</h3>
@@ -17,7 +25,7 @@
 
 
 
-<h2>Projects</h2>
+<h2 id="projects">Projects</h2>
 
 </main>
 </body>
