--- a/index.html
+++ b/index.html
@@ -25,7 +25,15 @@
 
 
 
-<h2 id="projects">Projects</h2>
+
+
+	<h2 id="projects">Projects</h2>
+
+		<a href="https://github.com/JennyMcC/fortune-teller/blob/master/src/FortuneTellerApp.java">Fortune Teller App</a>
+
+		<a href="https://github.com/JennyMcC/VirtualPetApp/tree/master/src">Virtual Pet App</a>
+
+		<a href="https://github.com/JennyMcC/VirtualPetsAmok/tree/master/virtualPets">Virtual Pet Amok</a>
 
 </main>
 </body>
