--- a/index.html
+++ b/index.html
@@ -16,17 +16,21 @@
 				</nav>
 			</header>
 
+<section>
 	<h2 id="about me">About Me</h2>
 		<p>I am currently enrolled in a 12-week coding bootcamp.  I was previously in retail management where we had made the shift to using technology to execute everything we did.  Ultimately, I wanted to be challenged in a different way, so I decided to enroll in the bootcamp so I could try a different and more creative approach to working in the industry.</p>
+
+		<img src="download.png" alt="Jenny's Picture">
 
 		<h3>Contact Information</h3>
 		<p>jennymccargish@gmail.com</p>
 
+		<a href="https://github.com/JennyMcC">My GitHub</a>
 
+		<a href="https://www.linkedin.com/in/jennifer-mccargish/">My LinkedIn</a>
+</section>
 
-
-
-
+<section>
 	<h2 id="projects">Projects</h2>
 
 		<a href="https://github.com/JennyMcC/fortune-teller/blob/master/src/FortuneTellerApp.java">Fortune Teller App</a>
@@ -34,7 +38,8 @@
 		<a href="https://github.com/JennyMcC/VirtualPetApp/tree/master/src">Virtual Pet App</a>
 
 		<a href="https://github.com/JennyMcC/VirtualPetsAmok/tree/master/virtualPets">Virtual Pet Amok</a>
-
+</section>
 </main>
+<footer></footer>
 </body>
 </html>
