--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 		<img src="download.png" alt="Jenny's Picture">
 
 		<h3>Contact Information</h3>
-		<p>jennymccargish@gmail.com</p>
+			<a href="jennymccargish@gmail.com">Email Me</a>
 
-		<a href="https://github.com/JennyMcC">My GitHub</a>
+			<a href="https://github.com/JennyMcC">My GitHub</a>
 
-		<a href="https://www.linkedin.com/in/jennifer-mccargish/">My LinkedIn</a>
+			<a href="https://www.linkedin.com/in/jennifer-mccargish/">My LinkedIn</a>
 </section>
 
 <section>
