--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 	<head>
 	<title>Jenny's Portfolio</title>
+	<link href="mystyles.css" type="css" rel="stylesheet">
 	</head>
+
 <body>
 <main>
 
@@ -23,7 +25,7 @@
 		<img src="download.png" alt="Jenny's Picture">
 
 		<h3>Contact Information</h3>
-			<a href="jennymccargish@gmail.com">Email Me</a>
+			<a href="https://jennymccargish@gmail.com">Email Me</a>
 
 			<a href="https://github.com/JennyMcC">My GitHub</a>
 
