--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 	<title>Jenny's Portfolio</title>
+	<link href="default-styles.css" rel="stylesheet">
 	<link href="mystyles.css" type="css" rel="stylesheet">
 	</head>
 
