--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 		<img src="download.png" alt="Jenny's Picture">
 
 		<h3>Contact Information</h3>
+		<nav>
 		<ul>
 			<a href="https://jennymccargish@gmail.com">Email Me</a>
 
@@ -33,6 +34,7 @@
 
 			<a href="https://www.linkedin.com/in/jennifer-mccargish/">My LinkedIn</a>
 		</ul>
+		</nav>
 </section>
 
 <section>
