--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 		<h3>Contact Information</h3>
 		<nav>
 		<ul>
-			<a href="https://jennymccargish@gmail.com">Email Me</a>
+			<li><a href="https://jennymccargish@gmail.com">Email Me</a></li>
 
-			<a href="https://github.com/JennyMcC">My GitHub</a>
+			<li><a href="https://github.com/JennyMcC">My GitHub</a></li>
 
-			<a href="https://www.linkedin.com/in/jennifer-mccargish/">My LinkedIn</a>
+			<li><a href="https://www.linkedin.com/in/jennifer-mccargish/">My LinkedIn</a></li>
 		</ul>
 		</nav>
 </section>
@@ -40,14 +40,14 @@
 <section>
 	<h2 id="projects">Projects</h2>
 	<ul>
-		<a href="https://github.com/JennyMcC/fortune-teller/blob/master/src/FortuneTellerApp.java">Fortune Teller App</a>
+		<li><a href="https://github.com/JennyMcC/fortune-teller/blob/master/src/FortuneTellerApp.java">Fortune Teller App</a></li>
 
-		<a href="https://github.com/JennyMcC/VirtualPetApp/tree/master/src">Virtual Pet App</a>
+		<li><a href="https://github.com/JennyMcC/VirtualPetApp/tree/master/src">Virtual Pet App</a></li>
 
-		<a href="https://github.com/JennyMcC/VirtualPetsAmok/tree/master/virtualPets">Virtual Pet Amok</a>
+		<li><a href="https://github.com/JennyMcC/VirtualPetsAmok/tree/master/virtualPets">Virtual Pet Amok</a></li>
 	</ul>
 </section>
 </main>
-<footer></footer>
+<footer>This is the footer.</footer>
 </body>
 </html>
