--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 	<head>
 	<title>Jenny's Portfolio</title>
-	<link href="default-styles.css" rel="stylesheet">
-	<link href="mystyles.css" type="css" rel="stylesheet">
+	<link href="mystyles.css" rel="stylesheet">
 	</head>
 
 <body>
@@ -26,26 +25,22 @@
 		<img src="download.png" alt="Jenny's Picture">
 
 		<h3>Contact Information</h3>
-		<nav>
-		<ul>
-			<li><a href="https://jennymccargish@gmail.com">Email Me</a></li>
-
-			<li><a href="https://github.com/JennyMcC">My GitHub</a></li>
-
-			<li><a href="https://www.linkedin.com/in/jennifer-mccargish/">My LinkedIn</a></li>
-		</ul>
-		</nav>
+			<nav>
+				<ul>
+					<li><a href="https://jennymccargish@gmail.com">Email Me</a></li>
+					<li><a href="https://github.com/JennyMcC">My GitHub</a></li>
+					<li><a href="https://www.linkedin.com/in/jennifer-mccargish/">My LinkedIn</a></li>
+				</ul>
+			</nav>
 </section>
 
 <section>
 	<h2 id="projects">Projects</h2>
-	<ul>
-		<li><a href="https://github.com/JennyMcC/fortune-teller/blob/master/src/FortuneTellerApp.java">Fortune Teller App</a></li>
-
-		<li><a href="https://github.com/JennyMcC/VirtualPetApp/tree/master/src">Virtual Pet App</a></li>
-
-		<li><a href="https://github.com/JennyMcC/VirtualPetsAmok/tree/master/virtualPets">Virtual Pet Amok</a></li>
-	</ul>
+		<ul>
+			<li><a href="https://github.com/JennyMcC/fortune-teller/blob/master/src/FortuneTellerApp.java">Fortune Teller App</a></li>
+			<li><a href="https://github.com/JennyMcC/VirtualPetApp/tree/master/src">Virtual Pet App</a></li>
+			<li><a href="https://github.com/JennyMcC/VirtualPetsAmok/tree/master/virtualPets">Virtual Pet Amok</a></li>
+		</ul>
 </section>
 </main>
 <footer>This is the footer.</footer>
