--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 	<title>Jenny's Portfolio</title>
-	<link href="mystyles.css" rel="stylesheet">
+	<link href="mystyles.css" type="text/css" rel="stylesheet">
 	</head>
 
 <body>
