--- a/index.html
+++ b/index.html
@@ -8,23 +8,27 @@
 <body>
 <main>
 
-<h1>Jennifer McCargish's Portfolio</h1>
-			<header>
-				<nav>
+<section>
+<header>
+<h1>Jennifer McCargish</h1>
+				<nav id="links">
 					<ul>
-						<li><a href="#about me">About Me</a></li>
-						<li><a href="#projects">Projects</a></li> 
+						<a href="#about me">About Me</a>
+						<a href="#projects">Projects</a>
 					</ul>
 				</nav>
 			</header>
+</section>
 
 <section>
-	<h2 id="about me">About Me</h2>
-		<p>I am currently enrolled in a 12-week coding bootcamp.  I was previously in retail management where we had made the shift to using technology to execute everything we did.  Ultimately, I wanted to be challenged in a different way, so I decided to enroll in the bootcamp so I could try a different and more creative approach to working in the industry.</p>
-
+	
 		<img src="download.png" alt="Jenny's Picture">
 
-		<h3>Contact Information</h3>
+		<h2 id="about me">About Me</h2>
+
+		<p>I am currently enrolled in a 12-week coding bootcamp.  I was previously in retail management where we had made the shift to using technology to execute everything we did.  Ultimately, I wanted to be challenged in a different way, so I decided to enroll in the bootcamp so I could try a different and more creative approach to working in the industry.</p>
+
+		<h2>Contact Information</h2>
 			<nav>
 				<ul>
 					<li><a href="https://jennymccargish@gmail.com">Email Me</a></li>
@@ -36,13 +40,18 @@
 
 <section>
 	<h2 id="projects">Projects</h2>
-		<ul>
-			<li><a href="https://github.com/JennyMcC/fortune-teller/blob/master/src/FortuneTellerApp.java">Fortune Teller App</a></li>
-			<li><a href="https://github.com/JennyMcC/VirtualPetApp/tree/master/src">Virtual Pet App</a></li>
-			<li><a href="https://github.com/JennyMcC/VirtualPetsAmok/tree/master/virtualPets">Virtual Pet Amok</a></li>
-		</ul>
+		<nav>
+			<ul>
+				<li><a href="https://github.com/JennyMcC/fortune-teller/blob/master/src/FortuneTellerApp.java">Fortune Teller App</a></li>
+				<img src="fortuneteller.png" alt="fortune teller screenshot">
+				<li><a href="https://github.com/JennyMcC/VirtualPetApp/tree/master/src">Virtual Pet App</a></li>
+				<img src="virtualpetapp.png" alt="virtual pet screenshot">
+				<li><a href="https://github.com/JennyMcC/VirtualPetsAmok/tree/master/virtualPets">Virtual Pet Amok</a></li>
+				<img src="petamok.png" alt="virtual pets amok screenshot">
+			</ul>
+		</nav>
 </section>
 </main>
-<footer>This is the footer.</footer>
+<footer>Icon made by Chanut is Industries from www.flaticon.com</footer>
 </body>
 </html>
