--- a/index.html
+++ b/index.html
@@ -1,34 +1,37 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<title>Jenny's Portfolio</title>
-	<link href="mystyles.css" type="text/css" rel="stylesheet">
+		<title>Jenny's Portfolio</title>
+		<link href="mystyles.css" type="text/css" rel="stylesheet">
 	</head>
 
 <body>
-<main>
 
 <section>
-<header>
-<h1>Jennifer McCargish</h1>
+	<header>
+		<h1>Jennifer McCargish</h1>
 				<nav id="links">
 					<ul>
 						<a href="#about me">About Me</a>
+						<a href="#contact info">Contact Information</a>
 						<a href="#projects">Projects</a>
 					</ul>
 				</nav>
-			</header>
+	</header>
 </section>
 
-<section>
+<main>
+
+<section id="top">
 	
 		<img src="download.png" alt="Jenny's Picture">
 
 		<h2 id="about me">About Me</h2>
 
 		<p>I am currently enrolled in a 12-week coding bootcamp.  I was previously in retail management where we had made the shift to using technology to execute everything we did.  Ultimately, I wanted to be challenged in a different way, so I decided to enroll in the bootcamp so I could try a different and more creative approach to working in the industry.</p>
-
-		<h2>Contact Information</h2>
+</section>
+<section>
+		<h2 id="contact info">Contact Information</h2>
 			<nav>
 				<ul>
 					<li><a href="https://jennymccargish@gmail.com">Email Me</a></li>
@@ -43,15 +46,17 @@
 		<nav>
 			<ul>
 				<li><a href="https://github.com/JennyMcC/fortune-teller/blob/master/src/FortuneTellerApp.java">Fortune Teller App</a></li>
-				<img src="fortuneteller.png" alt="fortune teller screenshot">
 				<li><a href="https://github.com/JennyMcC/VirtualPetApp/tree/master/src">Virtual Pet App</a></li>
-				<img src="virtualpetapp.png" alt="virtual pet screenshot">
 				<li><a href="https://github.com/JennyMcC/VirtualPetsAmok/tree/master/virtualPets">Virtual Pet Amok</a></li>
-				<img src="petamok.png" alt="virtual pets amok screenshot">
 			</ul>
+				<a href="https://github.com/JennyMcC/fortune-teller/blob/master/src/FortuneTellerApp.java"><img src="fortuneteller2.png" alt="fortune teller screenshot"></a>
+				<a href="https://github.com/JennyMcC/VirtualPetApp/tree/master/src"><img src="virtualpetapp2.png" alt="virtual pet screenshot"></a>
+				<a href="https://github.com/JennyMcC/VirtualPetsAmok/tree/master/virtualPets"><img src="petamok2.png" alt="virtual pets amok screenshot"></a>
 		</nav>
 </section>
-</main>
+
 <footer>Icon made by Chanut is Industries from www.flaticon.com</footer>
+
+</main>
 </body>
 </html>
