--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <section id="top">
 	
-		<img src="download.png" alt="Jenny's Picture">
+		<img src="pictures/download.png" alt="Jenny's Picture">
 
 		<h2 id="about me">About Me</h2>
 
@@ -49,9 +49,9 @@
 				<li><a href="https://github.com/JennyMcC/VirtualPetApp/tree/master/src">Virtual Pet App</a></li>
 				<li><a href="https://github.com/JennyMcC/VirtualPetsAmok/tree/master/virtualPets">Virtual Pet Amok</a></li>
 			</ul>
-				<a href="https://github.com/JennyMcC/fortune-teller/blob/master/src/FortuneTellerApp.java"><img src="fortuneteller2.png" alt="fortune teller screenshot"></a>
-				<a href="https://github.com/JennyMcC/VirtualPetApp/tree/master/src"><img src="virtualpetapp2.png" alt="virtual pet screenshot"></a>
-				<a href="https://github.com/JennyMcC/VirtualPetsAmok/tree/master/virtualPets"><img src="petamok2.png" alt="virtual pets amok screenshot"></a>
+				<a href="https://github.com/JennyMcC/fortune-teller/blob/master/src/FortuneTellerApp.java"><img src="pictures/fortuneteller2.png" alt="fortune teller screenshot"></a>
+				<a href="https://github.com/JennyMcC/VirtualPetApp/tree/master/src"><img src="pictures/virtualpetapp2.png" alt="virtual pet screenshot"></a>
+				<a href="https://github.com/JennyMcC/VirtualPetsAmok/tree/master/virtualPets"><img src="pictures/petamok2.png" alt="virtual pets amok screenshot"></a>
 		</nav>
 </section>
 
