--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 		<h1>Jennifer McCargish</h1>
 				<nav id="links">
 					<ul>
-						<a href="#about me">About Me</a>
-						<a href="#contact info">Contact Information</a>
+						<a href="#aboutMe">About Me</a>
+						<a href="#contactInfo">Contact Information</a>
 						<a href="#projects">Projects</a>
 					</ul>
 				</nav>
@@ -24,16 +24,16 @@
 
 <section id="top">
 
-		<img src="pictures/download.png" alt="Jenny's Picture">
+		<!-- <img src="pictures/download.png" alt="Jenny's Picture"> -->
 
-		<h2 id="about me">About Me</h2>
+		<h2 id="aboutMe">About Me</h2>
 
-		<p>I am currently enrolled in a 12-week coding bootcamp at We Can Code IT.  I was previously in retail management where we had made the shift to using technology to execute everything we did.  Ultimately, I wanted to be challenged in a different way, so I decided to enroll in the bootcamp so I could try a different and more creative approach to working in the industry.</p>
+		<p id="main">I am currently enrolled in a 12-week coding bootcamp at We Can Code IT.  I was previously in retail management where we had made the shift to using technology to execute everything we did.  Ultimately, I wanted to be challenged in a different way, so I decided to enroll in the bootcamp so I could try a different and more creative approach to working in the industry.</p>
 
 </section>
 
 <section>
-		<h2 id="contact info">Contact Information</h2>
+		<h2 id="contactInfo">Contact Information</h2>
 			<nav>
 				<ul>
 					<li><a href="mailto:jennymccargish@gmail.com">Email Me</a></li>
@@ -46,7 +46,7 @@
 <section>
 	<h2 id="projects">Projects</h2>
 		<nav>
-			<ul>
+			<ul id="projectLinks">
 				
 				<li><a href="https://github.com/JennyMcC/fortune-teller/blob/master/src/FortuneTellerApp.java">Fortune Teller App</a>
 
